# online-atps

./: .gitignore  .travis.yml  LICENSE  Makefile  README.md  online-atps.cabal  onlineatps.cabal
examples/: .onlineatps  basic.tptp
src/: Main.hs  OnlineATPs.hs
src/OnlineATPs/: CheckOutput.hs  Consult.hs  Defaults.hs  Internal.hs  Options.hs  SystemATP.hs  SystemOnTPTP.hs  Urls.hs
src/OnlineATPs/Utils/: Monad.hs  PrettyPrint.hs  Show.hs  Version.hs  Yaml.hs
src/data/: online-atps.yml  onlineatps.yml
src/fix-whitespace/: FixWhitespace.hs  fix-whitespace.cabal
talk/: beamerthemesthlm.sty  biblio.bib  draft.tex  main.tex  onlineatps.blg  onlineatps.fdb_latexmk  onlineatps.fls  onlineatps.nav  onlineatps.out  onlineatps.snm  onlineatps.tex  onlineatps.toc  onlineatps.vrb  overview.tex  preamble.tex  title.tex
test/basics/: basics.test  issue44.test  refl.fof
test/errors/: errors.test
