name:          online-atps
version:       0.1.1
build-type:    Simple
cabal-version: >= 1.10
author:        Jonathan Prieto-Cubides
license:       MIT
license-file:  LICENSE
maintainer:    Jonathan Prieto-Cubides <jprieto9@eafit.edu.co>
category:      Dependent types
homepage:      https://github.com/jonaprieto/online-atps
bug-reports:   https://github.com/jonaprieto/online-atps/issues/
synopsis:      A web interface for the ATPs
tested-with:   GHC == 7.6.3, GHC == 7.8.4, GHC == 7.10.3, GHC == 8.0.1
description:
  This package provides an interface to use the
  automatic theorem provers (ATPs) of TPTP World.

extra-source-files: README.md
data-dir:   src/data
data-files: online-atps.yml

source-repository head
  type:     git
  location: git://github.com/jonaprieto/online-atps.git

executable online-atps
  main-is:        Main.hs
  hs-source-dirs: src
  include-dirs:   src/OnlineATPs
  build-depends:  aeson >= 1.0.1.0 && < 1.2
                , base >= 4.6.0.1 && < 4.10
                , bytestring >= 0.10.0.2 && < 0.11
                , containers >= 0.5.0.0 && < 0.6
                --, cpphs >=1.18 && < 2.0
                , deepseq >= 1.3.0 && < 1.5
                , directory >= 1.2.0.1 && < 1.3
                , filepath >= 1.3.0.1 && < 1.5
                , HTTP >= 4000 && < 5000
                , http-client >= 0.5.1 && < 1.0
                , mtl >= 2.2.1 && < 2.3
                , network >= 2.6.0 && < 3.0
                , pretty >= 1.1.1.0 && < 1.1.1.2 || >= 1.1.2 && < 1.2
                , safe >= 0.3.5 && < 0.4
                , split >= 0.2 && < 1.0
                , tagsoup >= 0.14 && < 1.0
                , text >= 0.11.3.1 && < 1.3
                , unordered-containers >= 0.2  && < 0.3
                , yaml >= 0.8.17 && < 0.9

  other-modules:
    OnlineATPs.CheckOutput
    OnlineATPs.Consult
    OnlineATPs.Defaults
    OnlineATPs.Options
    OnlineATPs.SystemATP
    OnlineATPs.SystemOnTPTP
    OnlineATPs.Urls
    OnlineATPs.Utils.Monad
    OnlineATPs.Utils.PrettyPrint
    OnlineATPs.Utils.Show
    OnlineATPs.Utils.Version
    OnlineATPs.Utils.Yaml
    Paths_online_atps

  -- build-tools: cpphs >= 1.19

  ghc-options: -w
               -Werror

  if impl(ghc >= 7.6)
     ghc-options: -fwarn-alternative-layout-rule-transitional
                  -- The above option isn't documented in GHC 7.10.1.
                  -fwarn-deprecated-flags
                  -fwarn-dodgy-exports
                  -fwarn-dodgy-foreign-imports
                  -fwarn-dodgy-imports
                  -fwarn-duplicate-exports
                  -fwarn-hi-shadowing
                  -fwarn-identities
                  -fwarn-incomplete-patterns
                  -fwarn-incomplete-record-updates
                  -fwarn-incomplete-uni-patterns
                  -fwarn-missing-fields
                  -fwarn-missing-methods
                  -fwarn-missing-signatures
                  -fwarn-monomorphism-restriction
                  -fwarn-name-shadowing
                  -fwarn-orphans
                  -fwarn-overlapping-patterns
                  -fwarn-tabs
                  -fwarn-type-defaults
                  -fwarn-unrecognised-pragmas
                  -fwarn-unused-binds
                  -fwarn-unused-do-bind
                  -fwarn-unused-imports
                  -fwarn-unused-matches
                  -fwarn-unsupported-calling-conventions
                  -fwarn-warnings-deprecations
                  -fwarn-wrong-do-bind

  if impl(ghc >= 7.8)
     ghc-options: -fwarn-empty-enumerations
                  -fwarn-inline-rule-shadowing
                  -fwarn-overflowed-literals
                  -fwarn-typed-holes
                  -fwarn-unsupported-llvm-version

  -- The following option generates warnings with GHC 7.10.1.
  if impl(ghc < 7.10)
     ghc-options: -fno-warn-auto-orphans

  if impl(ghc >= 7.10)
     ghc-options: -fwarn-deriving-typeable
                  -fwarn-unticked-promoted-constructors

  if impl(ghc >= 7.6) && impl(ghc < 8.0)
    ghc-options: -fwarn-missing-local-sigs
                 -- This option will be removed in GHC 8.0.1.
                 -fwarn-pointless-pragmas

  -- This option will be deprected in GHC 8.0.1.
  if impl(ghc >= 7.8) && impl(ghc < 8.0)
    ghc-options: -fwarn-duplicate-constraints

  -- This option will be deprected in GHC 8.0.1.
  if impl(ghc >= 7.10) && impl(ghc < 8.0)
    ghc-options: -fwarn-context-quantification

  if impl(ghc >= 8.0)
    ghc-options: -Wmissing-local-signatures
                 -Wmissing-monadfail-instances
                 -Wmissing-pattern-synonym-signatures
                 -Wnoncanonical-monad-instances
                 -Wnoncanonical-monoid-instances
                 -Wredundant-constraints
                 -Wsemigroup
                 -Wunrecognised-warning-flags
                 -Wunused-foralls

  -- ghc-options: -rtsopts

  -- ghc-prof-options: -fprof-auto
