name:          fix-whitespace
version:       0.1
cabal-version: >= 1.8
build-type:    Simple
description:   Fixes whitespace issues.
tested-with:   GHC == 7.10.3

executable fix-whitespace
  main-is:          FixWhitespace.hs

  build-depends:
    base >= 4.6.0.1 && < 4.10
    , directory >= 1.2 && < 1.4
    , filemanip >= 0.3 && < 0.4
    , text >= 0.11 && < 1.3

  -- Only warnings.c
  if impl(ghc >= 7.6)
     ghc-options: -Wall
                  -fwarn-auto-orphans
                  -fwarn-identities
                  -fwarn-incomplete-record-updates
                  -fwarn-incomplete-uni-patterns
                  -fwarn-missing-import-lists
                  -fwarn-missing-local-sigs
                  -fwarn-monomorphism-restriction
                  -fwarn-tabs
--                  -Werror
